# MontecarlaRosbot

./: .gitignore  LICENSE  README.md  diario.md  memoria_tecnica_montecarla.md  proyectos_relacionados_wifi_localizacion.md
TFGdocs/.obsidian/: app.json  core-plugins.json  daily-notes.json  workspace.json
docker-compose/: compose.pc.lan.yaml  compose.pc.yaml  compose.real_experimentos.yaml  compose.real_replay.yaml  compose.rosbot.yaml  compose.sim.yaml
docker-compose/config/: nav2_params.yaml  rosbot_pro_mapping.rviz  slam_params.yaml  slam_params_sim.yaml  survey.rviz
docker-compose/maps/: casa_simple.pgm  casa_simple.yaml  corridor_sim.pgm  corridor_sim.yaml  radiomap_02_00_00_00_00_01.npy  radiomap_02_00_00_00_00_02.npy  radiomap_02_00_00_00_00_03.npy  radiomap_meta.yaml  radiomap_meta.yaml.example  ver_radiomaps.py
mapper-packages/: Dockerfile  run.sh
montecarla_amcl/: CMakeLists.txt  Dockerfile  package.xml
montecarla_amcl/config/: montecarla_amcl.yaml  montecarla_amcl_real.yaml  montecarla_amcl_real_cold_start.yaml  montecarla_amcl_real_experimentos.yaml  montecarla_amcl_real_kidnapped.yaml  montecarla_amcl_real_replay.yaml
montecarla_amcl/launch/: localization_launch.py
montecarla_amcl/src/: amcl_node.cpp
montecarla_msgs/: CMakeLists.txt  package.xml
montecarla_real/: Dockerfile  ate_real.py  registrar_checkpoints.py  seleccionar_aps.py
montecarla_real/wifi_scanner/: package.xml  setup.cfg  setup.py
montecarla_real/wifi_scanner/wifi_scanner/: iw_parser.py  wifi_scanner_node.py
montecarla_sim/: Dockerfile
nav2-wifi-heatmap/: Dockerfile
(+19 files in other folders)
